# rs-dapi-client

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: basic_usage.rs
src/: lib.rs
src/ffi/: get_status_response.rs  mod.rs
src/stubs/platform/: org.dash.platform.dapi.v0.rs
