[package]
name = "rs-dapi-client"
version = "0.0.1"
edition = "2021"
build = "build.rs"

#[package.metadata.env]
#platform_branch = "v0.24-dev"

[dependencies]
# GRPC
tonic = "0.9.2"
prost = "0.11.9"

# Concurrency
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# SPV ffi bindings
dash-spv-ffi = { path = "../dash-shared-core/dash-spv-ffi" }

[build-dependencies]
tonic-build = "0.9.2"
git2 = "0.17.1"
cargo_metadata = "0.15.4"
serde = "1.0.162"
serde_json = "1.0.96"
serde_derive = "1.0.152"